--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Made One</title>
+        <title>Solganeo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -61,7 +61,7 @@
 
 
         <div class="culmn">
-            <!--Home page style-->
+            <!--Acceuil page style-->
 
 
             <nav class="navbar navbar-default bootsnav navbar-fixed">
@@ -118,7 +118,7 @@
                             <i class="fa fa-bars"></i>
                         </button>
                         <a class="navbar-brand" href="#brand">
-                            <img src="assets/images/logo.png" class="logo" alt="">
+                            <img src="assets/images/logo.png" class="logo" alt="" style="margin-top: -15px;">
                             <!--<img src="assets/images/footer-logo.png" class="logo logo-scrolled" alt="">-->
                         </a>
 
@@ -128,7 +128,7 @@
                     <!-- navbar menu -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#home">Home</a></li>                    
+                            <li><a href="#Acceuil">Acceuil</a></li>                    
                             <li><a href="#features">About</a></li>
                             <li><a href="#business">Service</a></li>
                             <li><a href="#work">Portfolio</a></li>
@@ -140,60 +140,42 @@
 
             </nav>
 
-            <!--Home Sections-->
+            <!--Acceuil Sections-->
 
-            <section id="home" class="home bg-black fix">
+            <section id="Acceuil" class="Acceuil bg-black fix">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row">
-                        <div class="main_home text-center">
+                        <div class="main_Acceuil text-center">
                             <div class="col-md-12">
                                 <div class="hello_slid">
                                     <div class="slid_item">
-                                        <div class="home_text ">
-                                            <h2 class="text-white">Welcome to <strong>Made</strong></h2>
-                                            <h1 class="text-white">We Do Business All Of Time</h1>
-                                            <h3 class="text-white">- We Create a <strong>Concept</strong> into The Market -</h3>
-                                        </div>
-
-                                        <div class="home_btns m-top-40">
-                                            <a href="" class="btn btn-primary m-top-20">Buy Now</a>
-                                            <a href="" class="btn btn-default m-top-20">Take a Tour</a>
+                                        <div class="Acceuil_text ">
+                                            <h2 class="text-white">Bienvenu(e) à <strong>Solganeo</strong></h2>
+                                            <h1 class="text-white">Notre but est de vous apporter</h1>
+                                            <h3 class="text-white">- Des solutions <strong>Souples</strong> et <strong>performantes</strong> -</h3>
                                         </div>
                                     </div><!-- End off slid item -->
                                     <div class="slid_item">
-                                        <div class="home_text ">
-                                            <h2 class="text-white">Welcome to <strong>Made</strong></h2>
-                                            <h1 class="text-white">We Do Business All Of Time</h1>
-                                            <h3 class="text-white">- We Create a <strong>Concept</strong> into The Market -</h3>
-                                        </div>
-
-                                        <div class="home_btns m-top-40">
-                                            <a href="" class="btn btn-primary m-top-20">Buy Now</a>
-                                            <a href="" class="btn btn-default m-top-20">Take a Tour</a>
+                                        <div class="Acceuil_text ">
+                                            <h2 class="text-white"><strong>Solganeo</strong></h2>
+                                            <h1 class="text-white">Recrute !</h1>
+                                            <h3 class="text-white">- Rejoignez-nous et pilotez votre carrière <br/>dans un environnement international et innovant <br/>au service de la performance de nos clients !-</h3>
                                         </div>
                                     </div><!-- End off slid item -->
                                     <div class="slid_item">
-                                        <div class="home_text ">
-                                            <h2 class="text-white">Welcome to <strong>Made</strong></h2>
-                                            <h1 class="text-white">We Do Business All Of Time</h1>
-                                            <h3 class="text-white">- We Create a <strong>Concept</strong> into The Market -</h3>
-                                        </div>
-
-                                        <div class="home_btns m-top-40">
-                                            <a href="" class="btn btn-primary m-top-20">Buy Now</a>
-                                            <a href="" class="btn btn-default m-top-20">Take a Tour</a>
+                                        <div class="Acceuil_text ">
+                                            <h2 class="text-white">Chacun son <strong>métier !</strong></h2>
+                                            <h1 class="text-white">Vous développez votre projet</h1>
+                                            <h3 class="text-white">- Nous prenons en <strong>charge</strong> votre Plate-forme -</h3>
                                         </div>
                                     </div><!-- End off slid item -->
                                 </div>
                             </div>
-
                         </div>
-
-
                     </div><!--End off row-->
                 </div><!--End off container -->
-            </section> <!--End off Home Sections-->
+            </section> <!--End off Acceuil Sections-->
 
 
 
@@ -208,33 +190,30 @@
                                         <i class="fa fa-thumbs-o-up"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>Best Quality Design</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <h3>Nos qualités</h3>
+                                        <p>Parce que nous savons que ce sont les qualités humaines et les compétences de notre équipe qui participent aux succès de nos clients, chaque consultant de Solganeo a fait l’objet d’une sélection rigoureuse et a été certifié dans son domaine d’activité..</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
-                                        <i class="fa fa-tablet"></i>
+                                        <i class="fa fa-cogs"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>Responsive Design</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <h3>Methode de travail</h3>
+                                        <p>Nous proposons différentes méthodologies de travail collaboratif qui sont toujours adaptées au contexte de nos clients. Le plus souvent en mode itératif, elles évitent l’effet tunnel et facilitent l’adoption de la solution mise en place tout en réduisant le cycle projet.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="features_item sm-m-top-30">
                                     <div class="f_item_icon">
-                                        <i class="fa fa-sliders"></i>
+                                        <i class="fa fa-child"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>Easy to Customize</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque eleifend
-                                            in sit amet mattis volutpat rhoncus.</p>
+                                        <h3>Passion et Réussites </h3>
+                                        <p>Nous savons que les plus belles réussites sont des succès partagés entre nos équipes et celles de nos clients. Nos consultants sont passionnés par leur métier et ont une forte culture de l’engagement. Ils sont reconnus pour leurs valeurs et leur pragmatisme.</p>
                                     </div>
                                 </div>
                             </div>
@@ -276,7 +255,7 @@
                             
                             <div class="col-md-6">
                                 <div class="business_item sm-m-top-50">
-                                    <h2 class="text-uppercase"><strong>Made</strong> is Template For Business</h2>
+                                    <h2 class="text-uppercase"><strong>Solganeo</strong> is Template For Business</h2>
                                     <ul>
                                         <li><i class="fa fa-arrow-circle-right"></i> Clean & Modern Design</li>
                                         <li><i class="fa  fa-arrow-circle-right"></i> Fully Responsive</li>
@@ -756,7 +735,7 @@
                 <div class="main_footer fix bg-mega text-center p-top-40 p-bottom-30 m-top-80">
                     <div class="col-md-12">
                         <p class="wow fadeInRight" data-wow-duration="1s">
-                            Made with 
+                            Solganeo with 
                             <i class="fa fa-heart"></i>
                             by 
                             <a target="_blank" href="https://bootstrapthemes.co">Bootstrap Themes</a> 
