--- a/index.html
+++ b/index.html
@@ -255,16 +255,26 @@
                             
                             <div class="col-md-6">
                                 <div class="business_item sm-m-top-50">
-                                    <h2 class="text-uppercase"><strong>Solganeo</strong> is Template For Business</h2>
-                                    <ul>
-                                        <li><i class="fa fa-arrow-circle-right"></i> Clean & Modern Design</li>
-                                        <li><i class="fa  fa-arrow-circle-right"></i> Fully Responsive</li>
-                                        <li><i class="fa  fa-arrow-circle-right"></i> Google Fonts</li>
-                                    </ul>
-                                    <p class="m-top-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque eleifend in mi 
-                                        sit amet mattis suspendisse ac ligula volutpat nisl rhoncus sagittis cras suscipit 
-                                        lacus quis erat malesuada lobortis eiam dui magna volutpat commodo eget pretium vitae
-                                        elit etiam luctus risus urna in malesuada ante convallis.</p>
+                                    <h2 class="text-uppercase"><strong>Qui</strong> sommes-nous ?</h2>
+                                   
+                                    <p class="m-top-20">
+                                        Est une SSII spécialisée dans les nouvelles technologies. Nous accompagnons nos clients dans leurs projets et mettons à leur disposition notre savoir-faire. Notre expertise couvre un large scope allant du conseil aux entreprises, de la formation jusqu’à l’accompagnement de nos clients sur des projets stratégiques de transformation de système d’information.<br/>
+
+                                        Afin de vous accompagner dans cette perspective, BI SOLUTIONS a développé une offre de services offrant des solutions complètes et évolutives pour la gestion de vos infrastructures, votre personnel et de vos projets informatiques. Notre catalogue de services comprend notamment :<br/>
+
+                                        La sélection d’équipes et d’experts pluridisciplinaires formés à votre environnement et pouvant assurer en fonction de vos besoins :
+                                        <ul>
+                                            <li><i class="fa fa-arrow-circle-right"></i> Formation professionnelles</li>
+                                            <li><i class="fa  fa-arrow-circle-right"></i> La gestion de vos projets</li>
+                                            <li><i class="fa  fa-arrow-circle-right"></i> Le pilotage de la production et de l’exploitation</li>
+                                            <li><i class="fa  fa-arrow-circle-right"></i> La maintenance applicative et le support technique</li>
+
+                                        </ul>
+
+                                        <br/>Vous donne accès à une base importante de profils et à l’expertise d’une équipe dédiée à apporter des solutions à vos besoins en vous accompagnant dans la recherche de compétences.<br/>
+
+                                        Notre savoir-faire mêle méthodologie, expertise technique et connaissance des besoins du marché. Nous accordons une importance à la compréhension des exigences de nos clients. Le challenge et les défis font parties de la culture d’entreprise et l’ADN de notre société.
+                                    </p>
 
                                     <div class="business_btn">
                                         <a href="https://bootstrapthemes.co" class="btn btn-default m-top-20">Read More</a>
