--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="#Acceuil">Acceuil</a></li>                    
-                            <li><a href="#features">About</a></li>
+                            <li><a href="#features">À propos</a></li>
                             <li><a href="#business">Service</a></li>
                             <li><a href="#work">Portfolio</a></li>
                             <li><a href="#test">Blog</a></li>
@@ -260,7 +260,7 @@
                                     <p class="m-top-20">
                                         Est une SSII spécialisée dans les nouvelles technologies. Nous accompagnons nos clients dans leurs projets et mettons à leur disposition notre savoir-faire. Notre expertise couvre un large scope allant du conseil aux entreprises, de la formation jusqu’à l’accompagnement de nos clients sur des projets stratégiques de transformation de système d’information.<br/>
 
-                                        Afin de vous accompagner dans cette perspective, BI SOLUTIONS a développé une offre de services offrant des solutions complètes et évolutives pour la gestion de vos infrastructures, votre personnel et de vos projets informatiques. Notre catalogue de services comprend notamment :<br/>
+                                        Afin de vous accompagner dans cette perspective, Solganeo a développé une offre de services offrant des solutions complètes et évolutives pour la gestion de vos infrastructures, votre personnel et de vos projets informatiques. Notre catalogue de services comprend notamment :<br/>
 
                                         La sélection d’équipes et d’experts pluridisciplinaires formés à votre environnement et pouvant assurer en fonction de vos besoins :
                                         <ul>
@@ -641,18 +641,16 @@
                         <div class="widget_area">
                             <div class="col-md-3">
                                 <div class="widget_item widget_about">
-                                    <h5 class="text-white">About Us</h5>
+                                    <h5 class="text-white">À propos de nous</h5>
                                     <p class="m-top-20">Lorem ipsum dolor sit amet consec tetur adipiscing elit 
                                         nulla aliquet pretium nisi in cursus 
                                         maecenas nec eleifen.</p>
                                     <div class="widget_ab_item m-top-30">
                                         <div class="item_icon"><i class="fa fa-location-arrow"></i></div>
                                         <div class="widget_ab_item_text">
-                                            <h6 class="text-white">Location</h6>
+                                            <h6 class="text-white">Adresse</h6>
                                             <p>
-                                                123 suscipit ipsum nam auctor
-                                                mauris dui, ac sollicitudin mauris,
-                                                Bandung</p>
+                                                66 Avenue des Champs-Élysées, 75008 Paris</p>
                                         </div>
                                     </div>
                                     <div class="widget_ab_item m-top-30">
