corriger orthographe accueil

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
         <div class="culmn">
-            <!--Acceuil page style-->
+            <!--Accueil page style-->
 
 
             <nav class="navbar navbar-default bootsnav navbar-fixed">
@@ -128,7 +128,7 @@
                     <!-- navbar menu -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#Acceuil">Acceuil</a></li>                    
+                            <li><a href="#Accueil">Accueil</a></li>                    
                             <li><a href="#features">About</a></li>
                             <li><a href="#business">Service</a></li>
                             <li><a href="#work">Portfolio</a></li>
@@ -140,31 +140,31 @@
 
             </nav>
 
-            <!--Acceuil Sections-->
+            <!--Accueil Sections-->
 
-            <section id="Acceuil" class="Acceuil bg-black fix">
+            <section id="Accueil" class="Accueil bg-black fix">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row">
-                        <div class="main_Acceuil text-center">
+                        <div class="main_Accueil text-center">
                             <div class="col-md-12">
                                 <div class="hello_slid">
                                     <div class="slid_item">
-                                        <div class="Acceuil_text ">
+                                        <div class="Accueil_text ">
                                             <h2 class="text-white">Bienvenu(e) à <strong>Solganeo</strong></h2>
                                             <h1 class="text-white">Notre but est de vous apporter</h1>
                                             <h3 class="text-white">- Des solutions <strong>Souples</strong> et <strong>performantes</strong> -</h3>
                                         </div>
                                     </div><!-- End off slid item -->
                                     <div class="slid_item">
-                                        <div class="Acceuil_text ">
+                                        <div class="Accueil_text ">
                                             <h2 class="text-white"><strong>Solganeo</strong></h2>
                                             <h1 class="text-white">Recrute !</h1>
                                             <h3 class="text-white">- Rejoignez-nous et pilotez votre carrière <br/>dans un environnement international et innovant <br/>au service de la performance de nos clients !-</h3>
                                         </div>
                                     </div><!-- End off slid item -->
                                     <div class="slid_item">
-                                        <div class="Acceuil_text ">
+                                        <div class="Accueil_text ">
                                             <h2 class="text-white">Chacun son <strong>métier !</strong></h2>
                                             <h1 class="text-white">Vous développez votre projet</h1>
                                             <h3 class="text-white">- Nous prenons en <strong>charge</strong> votre Plate-forme -</h3>
@@ -175,7 +175,7 @@
                         </div>
                     </div><!--End off row-->
                 </div><!--End off container -->
-            </section> <!--End off Acceuil Sections-->
+            </section> <!--End off Accueil Sections-->
 
 
 
