Change image qui sommes nous

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Solganeo</title>
+        <title>Solganeo - Votre integrateur Salesforce</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -128,7 +128,7 @@
                     <!-- navbar menu -->
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#Accueil">Acceuil</a></li>                    
+                            <li><a href="#Accueil">Accueil</a></li>                    
                             <li><a href="#features">À propos</a></li>
                             <li><a href="#business">Service</a></li>
                             <li><a href="#work">Portfolio</a></li>
@@ -173,7 +173,10 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Nos qualités</h3>
-                                        <p>Parce que nous savons que ce sont les qualités humaines et les compétences de notre équipe qui participent aux succès de nos clients, chaque consultant de Solganeo a fait l’objet d’une sélection rigoureuse et a été certifié dans son domaine d’activité..</p>
+                                        <p>Parce que nous savons que ce sont les qualités humaines et les compétences de 
+                                          notre équipe qui participent aux succès de nos clients, chaque consultant de 
+                                          Solganeo a fait l’objet d’une sélection rigoureuse et a été certifié dans son 
+                                          domaine d’activité..</p>
                                     </div>
                                 </div>
                             </div>
@@ -184,7 +187,10 @@
                                     </div>
                                     <div class="f_item_text">
                                         <h3>Methode de travail</h3>
-                                        <p>Nous proposons différentes méthodologies de travail collaboratif qui sont toujours adaptées au contexte de nos clients. Le plus souvent en mode itératif, elles évitent l’effet tunnel et facilitent l’adoption de la solution mise en place tout en réduisant le cycle projet.</p>
+                                        <p>Nous proposons différentes méthodologies de travail collaboratives qui sont 
+                                          toujours adaptées au contexte de nos clients. Le plus souvent en mode itératif, 
+                                          elles évitent l’effet tunnel et facilitent l’adoption de la solution mise en 
+                                          place tout en réduisant le cycle projet.</p>
                                     </div>
                                 </div>
                             </div>
@@ -194,8 +200,11 @@
                                         <i class="fa fa-child"></i>
                                     </div>
                                     <div class="f_item_text">
-                                        <h3>Passion et Réussites </h3>
-                                        <p>Nous savons que les plus belles réussites sont des succès partagés entre nos équipes et celles de nos clients. Nos consultants sont passionnés par leur métier et ont une forte culture de l’engagement. Ils sont reconnus pour leurs valeurs et leur pragmatisme.</p>
+                                        <h3>Passion et Réussite </h3>
+                                        <p>Nous savons que les plus belles réussites sont des succès partagés entre nos 
+                                          équipes et celles de nos clients. Nos consultants sont passionnés par leur 
+                                          métier et ont une forte culture de l’engagement. Ils sont reconnus pour leurs 
+                                          valeurs et leur pragmatisme.</p>
                                     </div>
                                 </div>
                             </div>
@@ -211,15 +220,12 @@
                     <div class="row">
                         <div class="main_business">
                             <div class="col-md-6">
-                                <div class="business_slid">
-                                    <div class="slid_shap bg-grey"></div>
-                                    <div class="business_items text-center">
-                                        <div class="business_item">
-                                            <div class="business_img">
-                                                <img src="assets/images/about-img1.jpg" alt="" />
-                                            </div>
+                                <div class="business_items text-center">
+                                    <div class="business_item">
+                                        <div class="business_img">
+                                            <img src="assets/images/salesforce-integration.jpg" alt="" />
                                         </div>
-                                      </div>
+                                    </div>
                                 </div>
                             </div>
                             
@@ -228,26 +234,15 @@
                                     <h2 class="text-uppercase">Qui sommes-nous ?</h2>
                                    
                                     <p class="m-top-20">
-                                        Grâce à une méthodologie et à une technologie éprouvées et performantes, Solganeo fournit des services Salesforce efficaces, tels que l’administration, le conseil, la configuration, l’intégration, le développement de produits, la mise en œuvre, la personnalisation, la formation et le support.
-                                        Parce que nous attachons également de l'importance à la qualité pour nos clients, les pratiques d'assurance qualité sont intégrées à chaque étape du processus de développement. Lorsqu'il est ajouté à la formation et à l'adoption par les utilisateurs finaux, ainsi qu'au service d'assistance complet de Salesforce, Solganeo garantit le succès de la livraison de votre solution.  
-                                      <!-- <ul>
-                                            <li><i class="fa fa-arrow-circle-right"></i> Formation professionnelles</li>
-                                            <li><i class="fa  fa-arrow-circle-right"></i> La gestion de vos projets</li>
-                                            <li><i class="fa  fa-arrow-circle-right"></i> Le pilotage de la production et de l’exploitation</li>
-                                            <li><i class="fa  fa-arrow-circle-right"></i> La maintenance applicative et le support technique</li>
-
-                                        </ul>
-
-                                        <br/>Vous donne accès à une base importante de profils et à l’expertise d’une équipe dédiée à apporter des solutions à vos besoins en vous accompagnant dans la recherche de compétences.<br/> -->
-
-                                        <!-- Notre savoir-faire mêle méthodologie, expertise technique et connaissance des besoins du marché. Nous accordons une importance à la compréhension des exigences de nos clients. Le challenge et les défis font parties de la culture d’entreprise et l’ADN de notre société. -->
-                                    </p>
-
-                                    <!-- <div class="business_btn">
-                                        <a href="https://bootstrapthemes.co" class="btn btn-default m-top-20">Read More</a>
-                                        <a href="" class="btn btn-primary m-top-20">Buy Now</a>
-                                    </div> -->
-
+                                        Grâce à une méthodologie et à une technologie éprouvées et performantes, 
+                                        Solganeo fournit des services Salesforce efficaces, tels que l’administration, 
+                                        le conseil, la configuration, l’intégration, le développement de produits, 
+                                        la mise en œuvre, la personnalisation, la formation et le support.
+                                        Parce que nous attachons également de l'importance à la qualité pour nos 
+                                        clients, les pratiques d'assurance qualité sont intégrées à chaque étape du 
+                                        processus de développement. Lorsqu'il est ajouté à la formation et à l'adoption 
+                                        par les utilisateurs finaux, ainsi qu'au service d'assistance complet de Salesforce, 
+                                        Solganeo garantit le succès de la livraison de votre solution.  
                                 </div>
                             </div>
                         </div>
