--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
 
       <div class="container">
-        <div class="attr-nav">
+        <!-- <div class="attr-nav">
           <ul>
             <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- Start Header Navigation -->
         <div class="navbar-header">
